sources/kinto/verkehrsunfaelle/kinto-image_patch.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kinto
  labels:
    app.kubernetes.io/name: kinto
    app.kubernetes.io/component: datastore
spec:
  template:
    spec:
      containers:
      - name: kinto
        image: kinto/kinto-server:13.1.1
