sources/kinto/verkehrsunfaelle/postgres_patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: database
spec:
  template:
    spec:
      containers:
      - name: postgres
        image: quay.io/codeformuenster/verkehrsunfaelle:2019-11-03
