sources/kinto/verkehrsunfaelle/kinto-patches.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kinto
spec:
  rules:
  - host: kinto-verkehrsunfaelle.codeformuenster.org
    http:
      paths:
      - path: /
        backend:
          serviceName: kinto
          servicePort: api
  tls:
  - secretName: kinto-tls
    hosts:
    - kinto-verkehrsunfaelle.codeformuenster.org

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kinto
spec:
  template:
    spec:
      containers:
      - name: kinto
